src/app/components/in-app/sidenav/sidenav.component.scss
.side-nav-container {
  background-color: #fff;
  opacity: 1;
  height: 100vh;
}

.side-nav-header {
  padding: 10px 0 0 14px;

  @media screen and (min-width: 769px) {
    width: 500px;
  }

  @media screen and (max-width: 768px) {
    width: 85vw;
  }
}

.mat-list-icon {
  color: rgba(0, 0, 0, 0.54);
}

.create-account-button {
  padding-right: 14px;
  padding-top: 14px;
  float: right;
}

.account-currency {
  color: #673ab7;
}

.logo {
  width: 50px;
  float: left;
}

.title {
  float: left;
  padding-top: 8px;
  padding-left: 10px;
}

.divider {
  flex: 1 1 auto;
}

.settings {
  cursor: pointer;
}

.settings-done {
  cursor: pointer;
  color: #33CC00;
}

.operations-with-account {
  margin-top: -5px;
  padding-right: 4px;
}

.delete-operation {
  color: #ff7961;
  cursor: pointer;
}

.edit-operation {
  cursor: pointer;
  color: rgba(0, 0, 0, 0.54);
}

$SHAKE_DEGREES: 2;

.shake {
  animation: jiggle 0.2s infinite;
  -webkit-animation: jiggle 0.2s infinite;
  -moz-animation-duration: 0.2s;
  -moz-animation-name: jiggle;
  -moz-animation-iteration-count: infinite;
  -webkit-transform: rotate(-2deg);
  -moz-transform: rotate(-2deg);
}

@keyframes jiggle {
  0% {
    transform: rotate(-2deg);
  }
  50% {
    transform: rotate(2deg);
  }
}

@-webkit-keyframes jiggle {
  0% {
    -webkit-transform: rotate(-2deg);
  }
  50% {
    -webkit-transform: rotate(2deg);
  }
}

@-moz-keyframes jiggle {
  0% {
    -moz-transform: rotate(-2deg);
  }
  50% {
    -moz-transform: rotate(2deg);
  }
}

